# DataGatherAgent

./: .gitignore  README.md  bootstrap.ps1  bootstrap.sh  down.ps1  down.sh  login-wechat.ps1  login-wechat.sh  login-xhs.ps1  login-xhs.sh  services.local.example.json  services.local.json  services.manifest.json  start.ps1  start.sh  test-watch.ps1  test-watch.sh  up.ps1  up.sh
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/: base.py  external_tool.py  html_utils.py  mock_wechat.py  mock_wechat_clean.py  web_fetch_live.py  web_search_live.py  wechat_exporter_service.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: database.py  init_db.py
backend/app/middleware/: error_handler.py
backend/app/repositories/: workflow_repository.py
backend/app/schemas/: workflow.py
backend/app/services/: platform_login.py  platform_settings.py  platform_status.py  ranking.py  registry.py  update_notices.py  (+3 more)
backend/data/: workflow.sqlite3
backend/data_gather_agent_backend.egg-info/: SOURCES.txt  requires.txt
backend/tests/: test_adapters_current.py  test_api_article_endpoints.py  test_api_integration.py  test_bootstrap_stack.py  test_external_tool_adapter.py  test_manage_services.py  test_mediacrawler_runners.py  test_platform_login_service.py  test_platform_settings_service.py  test_ranking_service_current.py  test_service_control.py  test_service_env_store.py  test_start_mediacrawler_service.py  test_wechat_exporter_service.py  test_wechat_login_service.py  test_wechat_terminal_login.py  test_workflow_service.py
(+34 files in other folders)
